2009-11-05  Thomas Heller  <theller@python.net>

	* COMObject subclasses can now implement a _final_release_()
	method to free up resources, for example.  This method is called
	when the COM reference count reaches zero.

	* Implement __hash__ method in dynamic dispatch classes.  This
	fixes a 'python -3' warning.

	* comtypes\safearray.py: When numpy is not installed, creating
	safearrays took a very long time.  This is fixed now.

	* comtypes\test\test_server.py: New way to test COM client and
	server.  Work in progress.

2009-10-22  Thomas Heller  <theller@python.net>

	* Support broken COM objects that provide IProvideClassInfo2, but
	not IProvideClassInfo (although the latter is derived from the
	former).  See
	http://sourceforge.net/tracker/index.php?func=detail&aid=2829887&group_id=115265&atid=692942

	* Fixed a regression from the 0.4 version, [out] parameters didn't
	accept pointers or arrays any longer. Thanks again to Michael
	Eddington.

2009-10-19  Thomas Heller  <theller@python.net>

	* Fix a memory leak in Python COM servers.  Thanks to Michael
	Eddington for the patch.

2009-10-02  Thomas Heller  <theller@python.net>

	* comtypes\test\test_server.py: Start a better approach to test
	both COM object calls and COM object implementations.

2009-09-09  Thomas Heller  <theller@python.net>

	* Fix returning SAFEARRAY of VT_RECORDs.  Based on a patch from
	Eduardo Arias.

	* New module comtypes.viewobject, contains the interfaces
	IViewObject, IViewObject2, IViewObjectEx.  IAdviseSink is faked.

	* Change version number to 0.6.2dev.

2009-09-04  Thomas Heller  <theller@python.net>

	* CoTaskMemFree does not return a HRESULT.  Patch from James Teh.

2009-08-19  Thomas Heller  <theller@python.net>

	* Bumped version number to 0.6.1.

2009-08-07  Thomas Heller  <theller@python.net>

	* When an interface was specified in the call to
	IClassObject.CreateInstance, return that instead of calling
	GetBestInterface.  Patch from James Teh.
